<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.karkhana.prash.karkhana.MainDiplayActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/VerifyText"
        android:background="@drawable/background"
        android:focusable="true"
        android:visibility="gone">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:elevation="2dp"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/Background"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="28sp"
        android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/Step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Step2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:text="@string/step1"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/Step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/step2"
            android:textColor="@color/textColor" />

    </RelativeLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/thankyou"
        android:layout_alignStart="@+id/thankyou"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="92dp"
        android:text="@string/hello"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/getName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/welcome"
        android:layout_alignBottom="@+id/welcome"
        android:layout_marginStart="12dp"
        android:text="User"
        android:layout_toEndOf="@+id/welcome"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/thankyou"
        android:layout_centerInParent="true">



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Welcome_message"
        android:textColor="@color/textColor"
        android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/welcome"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@null"
            android:padding="2dp"
            android:layout_marginTop="20dp"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:id="@+id/Refresh"
            android:shadowColor="@color/textColorPrimary"
            />
    </LinearLayout>


    <Button
        android:id="@+id/NEXT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:textSize="24sp"
        android:text="@string/started"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:focusable="true"
        android:background="@color/btn_back"/>


</RelativeLayout>
